--- a/index.html
+++ b/index.html
@@ -13,25 +13,31 @@
         <header>
             <nav id="header">
                 <div class="container">
-                    <div>
-                        <a href="#" class="pull-left visible-md visible-lg"></a>
-                        <div id="heading-name">
-                            <h1>Outlines</h1>
-                        </div>
-                        <div class="topnav" id="myTopnav">
-                            <a href="#signup">Sign Up</a>
-                            <a href="#about">About</a>
-                            <a href="#contact">Contact</a>
-                            <a href="#gallery">Gallery</a>
-                            <a href="#services">Services</a>
-                            <a href="#home" class="active">Home</a>
-                            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                              <i class="fa fa-bars"></i>
-                            </a>
-                          </div>
+                    <a href="#" class="pull-left visible-md visible-lg"></a>
+                    <div id="heading-name">
+                        <h1>Outlines</h1>
+                        <h4>journeys beyond the map</h4>
+                    </div>
+                    <div class="topnav" id="myTopnav">
+                        <a href="#signup">Sign Up</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                        <a href="#gallery">Gallery</a>
+                        <a href="#services">Services</a>
+                        <a href="#home" class="active">Home</a>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                          <i class="fa fa-bars"></i>
+                        </a>
                     </div>
                 </div>
             </nav> 
-        </header>   
+        </header> 
+        <div id="background1">
+            <img src="bg1.jpg">
+            <div id="text1">
+                <p>There are trips that fit a sheet of paper. Then there are experiences that surpass the full power of words.Trips that take us beyond the map and, on the ride of the five senses, transport us beyond the reality we know!</p>
+                <button class="btn">Book Your Stay</button>
+            </div>
+        </div>  
     </body>
 </html>
