--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <h4>journeys beyond the map</h4>
                     </div>
                     <div class="topnav" id="myTopnav">
-                        <a href="#signup">Sign Up</a>
+                        <a href="login1.html">Login</a>
                         <a href="#about">About</a>
                         <a href="#contact">Contact</a>
                         <a href="#gallery">Gallery</a>
