--- a/gallery.html
+++ b/gallery.html
@@ -20,29 +20,57 @@
                         <h4>journeys beyond the map</h4>
                     </div>
                     <div class="topnav" id="myTopnav">
-                        <a href="#signup">Sign Up</a>
+                        <a href="login.html">Login</a>
                         <a href="#about">About</a>
                         <a href="contact.html">Contact</a>
-                        <a href="gallery.html">Gallery</a>
+                        <a href="gallery.html" class="active">Gallery</a>
                         <a href="#services">Services</a>
-                        <a href="#" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </div>
                 </div>
             </nav> 
         </header> 
-        <div class="container" id="main-content">
-            <div id="background1">
-                <img src="images/bg1.jpg">
-                <div id="text1">
+        <div class="container" id="gallery-content">
+            <div class="slideshow-container">
+                <div id="gallery1" class="slides fade">
+                    <img src="images/gallery1.jpg">
+                </div>
+                <div id="gallery2" class="slides fade">
+                    <img src="images/gallery2.jpg">
+                </div>
+                <div id="gallery3" class="slides fade">
+                    <img src="images/bg1.jpg">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+
+            <script>
+                var slideIndex = 2;
+                showSlides(slideIndex);
+
+                function plusSlides(n) {
+                  showSlides(slideIndex += n);
+                }
+
+                function showSlides(n) {
+                  var i;
+                  var slides = document.getElementsByClassName("slides");
+                  if (n > slides.length) {slideIndex = 1}    
+                  if (n < 1) {slideIndex = slides.length}
+                  for (i = 0; i < slides.length; i++) {
+                      slides[i].style.display = "none";  
+                  }
+                  slides[slideIndex-1].style.display = "block";  
+                }
+            </script>
+
+        <!--        <div id="galery-text1">
                     <p>There are trips that fit a sheet of paper. Then there are experiences that surpass the full power of words.Trips that take us beyond the map and, on the ride of the five senses, transport us beyond the reality we know!</p>
                     <a href="services.html">
                         <button class="btn">Book Your Stay</button>
                     </a>
-                </div>
-            </div>
-            <div id="background2">
-                <img src="images/bg2.jpg">
-            </div>
+                </div> -->
         </div>
         <footer class="panel-footer">
             <div class="container">
