Gallery page added

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
         <title>
             Intelligent Tourist System
         </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <meta charset = "utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://kit.fontawesome.com/yourcode.js"></script>
 	</head>
     <body>
         <header>
@@ -21,10 +22,10 @@
                     </div>
                     <div class="topnav" id="myTopnav">
                         <a href="signup.html">Sign Up</a>
-                        <a href="#about">About</a>
-                        <a href="#contact" class="active">Contact</a>
-                        <a href="#gallery">Gallery</a>
-                        <a href="#services">Services</a>
+                        <a href="about.html">About</a>
+                        <a href="contact.html" class="active">Contact</a>
+                        <a href="gallery.html">Gallery</a>
+                        <a href="services.html">Services</a>
                         <a href="index.html">Home</a>
                     </div>
                 </div>
