--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <title>
             Intelligent Tourist System
         </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <meta charset = "utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://kit.fontawesome.com/yourcode.js"></script>
 	</head>
     <body>
         <header>
@@ -20,12 +21,12 @@
                         <h4>journeys beyond the map</h4>
                     </div>
                     <div class="topnav" id="myTopnav">
-                        <a href="#signup">Sign Up</a>
-                        <a href="#about">About</a>
+                        <a href="signup.html">Sign Up</a>
+                        <a href="about.html">About</a>
                         <a href="contact.html">Contact</a>
                         <a href="gallery.html">Gallery</a>
-                        <a href="#services">Services</a>
-                        <a href="#" class="active">Home</a>
+                        <a href="services.html">Services</a>
+                        <a href="index.html" class="active">Home</a>
                     </div>
                 </div>
             </nav> 
@@ -36,7 +37,7 @@
                 <div id="text1">
                     <p>There are trips that fit a sheet of paper. Then there are experiences that surpass the full power of words.Trips that take us beyond the map and, on the ride of the five senses, transport us beyond the reality we know!</p>
                     <a href="services.html">
-                        <button class="btn">Book Your Stay</button>
+                        <button class="btn">Book Your Tour</button>
                     </a>
                 </div>
             </div>
