--- a/login1.html
+++ b/login1.html
@@ -13,54 +13,65 @@
 </head>
 
 <body>
-    <div class="title">
-       
+    <header>
+        <nav id="header">
+            <div class="container">
+                <a href="#" class="pull-left visible-md visible-lg"></a>
+                <div id="heading-name">
+                    <h1>Outlines</h1>
+                    <h4>journeys beyond the map</h4>
+                </div>
+                <div class="topnav" id="myTopnav">
+                    <a href="#signup" class="active">Sign Up</a>
+                    <a href="#about">About</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="#gallery">Gallery</a>
+                    <a href="services.html">Services</a>
+                    <a href="index.html">Home</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div id="signup-content">
+        <h1>Sign Up</h1>
     </div>
     <div class="container">
-
         <form action="/action_page.php">
-            <div class="row">
-                <h2 style="text-align:center">Login with Social Media or Manually</h2>
-                <div class="vl">
-                    <span class="vl-innertext">or</span>
-                </div>
-
-                <div class="col">
-                    <a href="#" class="fb btn">
-                        <i class="fa fa-facebook fa-fw"></i> Login with Facebook
-                    </a>
-                    <a href="#" class="twitter btn">
-                        <i class="fa fa-twitter fa-fw"></i> Login with Twitter
-                    </a>
-                    <a href="#" class="google btn"><i class="fa fa-google fa-fw">
-                        </i> Login with Gmail
-                    </a>
-                </div>
-
-                <div class="col">
-                    <div class="hide-md-lg">
-                        <p>Or sign in manually:</p>
-                    </div>
-
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="Login">
-                </div>
-
-            </div>
+            <input type="text" id="firstname" name="firstname" placeholder="First Name" required><br>
+            <input type="text" id="lastname" name="lastname" placeholder="Last Name" required><br>
+            <input type="email" id="email" name="email" placeholder="Email" required><br>
+            <input type="text" id="password" name="password" placeholder="Password" required><br>
+            <input type="submit" value="Submit">
         </form>
     </div>
-
-    <div class="bottom-container">
-        <div class="row">
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Sign up</a>
+    <br>
+    <p style="color:#4A5868">or Login Manually</p>
+    <div class="container">
+        <form action="/action_page.php">
+            <input type="email" id="email" name="email" placeholder="Email" required><br>
+            <input type="text" id="password" name="password" placeholder="Password" required><br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <br>
+    <footer class="panel-footer">
+        <div class="container">
+            <div id="contactno">
+                <p>Mo : +9102221642356</p>
+                <p>Email : info@outlines.com</p>
             </div>
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Forgot password?</a>
+            <div class="row">
+                <div class="column" id="copyright">&copy; 2019 Outlines - All rights reserved</div>
+                <div class="column" id="sociallogo">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                </div>
             </div>
         </div>
-    </div>
+    </footer> 
 
 </body>
+
 </html>
