--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                         <h4>journeys beyond the map</h4>
                     </div>
                     <div class="topnav" id="myTopnav">
-                        <a href="signup.html">Sign Up</a>
-                        <a href="about.html">About</a>
+                        <a href="signup.php">Sign Up</a>
                         <a href="contact.html">Contact</a>
                         <a href="gallery.html">Gallery</a>
                         <a href="services.html">Services</a>
