--- a/hotels.html
+++ b/hotels.html
@@ -37,11 +37,6 @@
 					<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
 				        <h1 style="color: white;">Outlines</h1>
-				
-				<div class="container main-menu">
-					<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
@@ -65,7 +60,7 @@
 							<h1 class="text-white">
 								Hotels				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="hotels.html"> Hotels</a></p>
+							<p class="text-white link-nav"><a href="index.php">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="hotels.php"> Hotels</a></p>
 						</div>	
 					</div>
 				</div>
