--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 				          <li><a href="about.html">About</a></li>
 				          <li><a href="packages.php">Packages</a></li>
 
-				          <li><a href="hotels.html">Hotels</a></li>		          					          		          
+				          <li><a href="hotels.php">Hotels</a></li>		          					          		          
 
 				    
 				         
@@ -65,7 +65,7 @@
 							<h1 class="text-white">
 								About Us				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about.html"> About Us</a></p>
+							<p class="text-white link-nav"><a href="index.php">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about.html"> About Us</a></p>
 						</div>	
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 							<h6>About Us</h6>
 							<h1>Who We Are?</h1>
 							<p>
-								Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+								Nurtured from the seed of a single great idea - to empower the traveller- Outlines is a pioneer in India's Travel Industry.<br> We provide travel packages at the best rates. <br>Our tours are for everyone; luxury to bagpacking.<br>We provide a wide variety of hotels even at the most exotic locations. 
 							</p>
 						</div>
 					</div>
